--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "devDependencies": {
-    "@tsconfig/node16": "1.0"
-  }
+    "@tsconfig/node16": "1.0",
+    "@types/node": "16.11",
+    "typescript": "4.4"
+  },
+  "name": "teste-typescript",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JoaoFelipeKraemer/back-typescript.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JoaoFelipeKraemer/back-typescript/issues"
+  },
+  "homepage": "https://github.com/JoaoFelipeKraemer/back-typescript#readme",
+  "description": ""
 }
